# petring

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  download.sh  justfile  petring-api.toml  petring-web.toml  petring.toml  recipe.json  shell.nix
.github/workflows/: auto_pr.yml  release.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs  petring.rs
api/src/petring/: config.rs  state.rs
api/src/petring/api/: protected.rs  public.rs
api/src/petring/database/: users.rs
backend/: README.md
frontend/: index.html  script.js  style.css
frontend/css/: style.css
frontend/petads/: ad.html  index.html  script.js
frontend/submit/: index.html
migration/: Cargo.toml  justfile
migration/src/: lib.rs  m20250916_165513_create_table_members.rs  m20250922_025851_create_table_users.rs  m20251001_135745_create_table_ads.rs
src/: jess_museum.rs  main.rs  petring.rs
src/jess_museum/: admin.rs  api.rs  cli.rs  config.rs  jwt.rs  state.rs
src/jess_museum/database/: members.rs
src/petring/: api.rs  cli.rs  config.rs  database.rs  jwt.rs
src/petring/api/: protected.rs  public.rs
src/petring/api/protected/: petads.rs  petring.rs
src/petring/database/: ads.rs
web/: Cargo.toml  Dockerfile
web/src/: main.rs  petring.rs
web/src/petring/: api.rs  config.rs  state.rs
web/templates/: 404.html
