[package]
name = "jess-webring-backend"
version = "0.1.0"
edition = "2024"


[dependencies]
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie-private"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
dotenvy = "0.15.7"
humantime = "2.2.0"
mime_guess = "2.0.5"
once_cell = "1.21.3"
rustls = { version = "0.23.31", features = ["ring"] }
sea-orm = { version = "1.1.15", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tower = "0.5.2"
tower-http = { version = "0.5.0", features = ["compression-full", "decompression-full", "fs", "normalize-path"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }

[workspace]
members = [".", "migration"]
