[package]
name = "web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "petring-web"
path = "src/main.rs"
test = false
bench = false

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie-private"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
dotenvy = "0.15.7"
humantime = "2.2.0"
mime_guess = "2.0.5"
once_cell = "1.21.3"
rand = "0.9.2"
rustls = { version = "0.23.31", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-full", "decompression-full", "fs", "normalize-path", "trace", "cors", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
